--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,51 +2,30 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/drinkFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/drinkFragment"
-        android:name="com.koniukhov.waterreminder.fragments.DrinkFragment"
+        android:id="@+id/homeFragment"
+        android:name="com.koniukhov.waterreminder.fragments.HomeFragment"
         android:label="DrinkFragment" >
         <action
-            android:id="@+id/action_drinkFragment_to_statisticsFragment"
-            app:destination="@id/statisticsFragment" />
-        <action
-            android:id="@+id/action_drinkFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
-        <action
-            android:id="@+id/action_drinkFragment_to_starterFragment"
+            android:id="@+id/action_homeFragment_to_starterFragment"
             app:destination="@id/starterFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.koniukhov.waterreminder.fragments.SettingsFragment"
-        android:label="SettingsFragment" >
-        <action
-            android:id="@+id/action_settingsFragment_to_statisticsFragment"
-            app:destination="@id/statisticsFragment" />
-        <action
-            android:id="@+id/action_settingsFragment_to_drinkFragment"
-            app:destination="@id/drinkFragment"
-            app:popUpToInclusive="false" />
-    </fragment>
+        android:label="SettingsFragment" />
     <fragment
         android:id="@+id/starterFragment"
         android:name="com.koniukhov.waterreminder.fragments.StarterFragment"
         android:label="StarterFragment" >
         <action
-            android:id="@+id/action_starterFragment_to_drinkFragment"
-            app:destination="@id/drinkFragment" />
+            android:id="@+id/action_starterFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/statisticsFragment"
         android:name="com.koniukhov.waterreminder.fragments.StatisticsFragment"
-        android:label="StatisticsFragment" >
-        <action
-            android:id="@+id/action_statisticsFragment_to_drinkFragment"
-            app:destination="@id/drinkFragment" />
-        <action
-            android:id="@+id/action_statisticsFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
-    </fragment>
+        android:label="StatisticsFragment" />
 </navigation>
