--- a/app/src/main/res/layout/starter_fragment.xml
+++ b/app/src/main/res/layout/starter_fragment.xml
@@ -1,6 +1,312 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <import type="android.view.View"/>
+        <import type="com.koniukhov.waterreminder.data.user.Sex"/>
+        <variable
+            name="viewModel"
+            type="com.koniukhov.waterreminder.viewmodels.StarterViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/intro_layout"
+        android:visibility="@{viewModel.introLayoutVisible ? View.VISIBLE : View.GONE}"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/next_button"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/starter_intro_title"
+            android:padding="@dimen/base_padding"
+            style="@style/TextAppearance.Material3.TitleLarge"
+            android:textColor="@color/md_theme_light_primary"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/starter_intro_text"
+            android:padding="@dimen/base_padding"
+            style="@style/TextAppearance.Material3.BodyMedium"/>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/sex_layout"
+        android:visibility="@{viewModel.sexLayoutVisible ? View.VISIBLE : View.GONE}"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/next_button">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/starter_gender_title"
+            style="@style/TextAppearance.Material3.HeadlineMedium"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/base_margin"
+            android:textColor="@color/md_theme_light_primary"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:gravity="center_vertical">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:alpha='@{viewModel.maleLayoutAlpha}'
+                android:onClick='@{() -> viewModel.setSex(Sex.MALE)}'>
+                <ImageView
+                    android:layout_width="@dimen/intro_sex_image_size"
+                    android:layout_height="@dimen/intro_sex_image_size"
+                    android:src="@drawable/male_icon"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/male_text"
+                    style="@style/TextAppearance.Material3.TitleMedium"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:alpha='@{viewModel.femaleLayoutAlpha}'
+                android:onClick='@{() -> viewModel.setSex(Sex.FEMALE)}'>
+                <ImageView
+                    android:layout_width="@dimen/intro_sex_image_size"
+                    android:layout_height="@dimen/intro_sex_image_size"
+                    android:src="@drawable/female_icon"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/female_text"
+                    style="@style/TextAppearance.Material3.TitleMedium"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/weight_layout"
+        android:visibility="@{viewModel.weightLayoutVisible ? View.VISIBLE : View.GONE}"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/next_button">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/starter_weight_title"
+            style="@style/TextAppearance.Material3.HeadlineMedium"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/base_margin"
+            android:textColor="@color/md_theme_light_primary"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:gravity="center_vertical">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <ImageView
+                    android:layout_width="@dimen/intro_sex_image_size"
+                    android:layout_height="@dimen/intro_sex_image_size"
+                    android:src="@drawable/weight_icon"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <NumberPicker
+                    android:layout_width="@dimen/intro_sex_image_size"
+                    android:layout_height="@dimen/intro_sex_image_size"
+                    android:layout_gravity="center"
+                    android:descendantFocusability="blocksDescendants"
+                    app:minValue="@{viewModel.WEIGHT_MIN}"
+                    app:maxValue="@{viewModel.WEIGHT_MAX}"
+                    app:value="@{viewModel.DEFAULT_WEIGHT}"
+                    android:onValueChange='@{(picker, old, new) -> viewModel.setWeight(new)}'/>
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/time_layout"
+        android:visibility="@{viewModel.timeLayoutVisible ? View.VISIBLE : View.GONE}"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/next_button">
+
+        <RelativeLayout
+            android:id="@+id/day_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin">
+
+            <ImageView
+                android:id="@+id/day_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:src="@drawable/day_icon"
+                app:layout_constraintEnd_toStartOf="@+id/textView4"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView4"
+                style="@style/TextAppearance.Material3.HeadlineMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_toRightOf="@id/day_icon"
+                android:gravity="center_vertical"
+                android:text="@string/starter_wakeup_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/md_theme_light_primary"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/wake_up_picker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/day_title"
+            android:gravity="center">
+            <NumberPicker
+                android:id="@+id/wake_up_hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:minValue="@{viewModel.HOUR_MIN_VALUE}"
+                app:maxValue="@{viewModel.HOUR_MAX_VALUE}"
+                app:value="@{viewModel.DEFAULT_WAKE_UP_HOUR}"
+                android:onValueChange='@{(picker, old, new) -> viewModel.setWakeUpHour(new)}'/>
+            <NumberPicker
+                android:id="@+id/wake_up_minute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/wake_up_hour"
+                android:layout_marginLeft="@dimen/base_margin"
+                app:minValue="@{viewModel.HOUR_MIN_VALUE}"
+                app:maxValue="@{viewModel.MINUTE_MAX_VALUE}"
+                app:value="@{viewModel.DEFAULT_MINUTE}"
+                android:onValueChange='@{(picker, old, new) -> viewModel.setWakeUpMinute(new)}'/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/night_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/wake_up_picker"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin">
+
+            <ImageView
+                android:id="@+id/night_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:src="@drawable/night_icon"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView5"
+                style="@style/TextAppearance.Material3.HeadlineMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_toRightOf="@id/night_icon"
+                android:gravity="center_vertical"
+                android:text="@string/starter_sleep_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/md_theme_light_primary"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/night_title"
+            android:gravity="center">
+            <NumberPicker
+                android:id="@+id/sleep_hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:minValue="@{viewModel.HOUR_MIN_VALUE}"
+                app:maxValue="@{viewModel.HOUR_MAX_VALUE}"
+                app:value="@{viewModel.DEFAULT_BED_HOUR}"
+                android:onValueChange='@{(picker, old, new) -> viewModel.setBedTimeHour(new)}'/>
+            <NumberPicker
+                android:id="@+id/sleep_minute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/sleep_hour"
+                android:layout_marginLeft="@dimen/base_margin"
+                app:minValue="@{viewModel.HOUR_MIN_VALUE}"
+                app:maxValue="@{viewModel.MINUTE_MAX_VALUE}"
+                app:value="@{viewModel.DEFAULT_MINUTE}"
+                android:onValueChange='@{(picker, old, new) -> viewModel.setBedTimeMinute(new)}'/>
+        </RelativeLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/next_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_next_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="@dimen/base_margin"
+        android:onClick='@{() -> viewModel.processButton()}'/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
