--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,7 +10,9 @@
         android:label="DrinkFragment" >
         <action
             android:id="@+id/action_homeFragment_to_starterFragment"
-            app:destination="@id/starterFragment" />
+            app:destination="@id/starterFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -22,7 +24,9 @@
         android:label="StarterFragment" >
         <action
             android:id="@+id/action_starterFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/starterFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/statisticsFragment"
