--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -89,7 +89,7 @@
                     android:text="@string/starter_gender_title" />
 
                 <TextView
-                    android:id="@+id/sex_text"
+                    android:id="@+id/gender_text"
                     style="@style/Theme.WaterReminder.SettingsValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -141,7 +141,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/starter_sleep_title"
+                    android:text="@string/starter_bed_time_title"
                     android:layout_alignParentStart="true"/>
                 <TextView
                     android:id="@+id/bed_time_text"
