--- a/app/src/main/res/layout/starter_fragment.xml
+++ b/app/src/main/res/layout/starter_fragment.xml
@@ -4,7 +4,7 @@
 
     <data>
         <import type="android.view.View"/>
-        <import type="com.koniukhov.waterreminder.data.user.Sex"/>
+        <import type="com.koniukhov.waterreminder.data.user.Gender"/>
         <variable
             name="viewModel"
             type="com.koniukhov.waterreminder.viewmodels.StarterViewModel" />
@@ -43,7 +43,7 @@
 
     <RelativeLayout
         android:id="@+id/sex_layout"
-        android:visibility="@{viewModel.sexLayoutVisible ? View.VISIBLE : View.GONE}"
+        android:visibility="@{viewModel.isGenderLayoutVisible() ? View.VISIBLE : View.GONE}"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,7 +71,7 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:alpha='@{viewModel.maleLayoutAlpha}'
-                android:onClick='@{() -> viewModel.setSex(Sex.MALE)}'>
+                android:onClick="@{() -> viewModel.setGender(Gender.MALE)}">
                 <ImageView
                     android:layout_width="@dimen/intro_gender_image_size"
                     android:layout_height="@dimen/intro_gender_image_size"
@@ -92,7 +92,7 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:alpha='@{viewModel.femaleLayoutAlpha}'
-                android:onClick='@{() -> viewModel.setSex(Sex.FEMALE)}'>
+                android:onClick="@{() -> viewModel.setGender(Gender.FEMALE)}">
                 <ImageView
                     android:layout_width="@dimen/intro_gender_image_size"
                     android:layout_height="@dimen/intro_gender_image_size"
@@ -263,7 +263,7 @@
                 android:layout_marginTop="@dimen/base_margin"
                 android:layout_toRightOf="@id/night_icon"
                 android:gravity="center_vertical"
-                android:text="@string/starter_sleep_title"
+                android:text="@string/starter_bed_time_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -278,7 +278,7 @@
             app:layout_constraintTop_toBottomOf="@id/night_title"
             android:gravity="center">
             <NumberPicker
-                android:id="@+id/sleep_hour"
+                android:id="@+id/bed_time_hour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:minValue="@{viewModel.HOUR_MIN_VALUE}"
@@ -286,10 +286,10 @@
                 app:value="@{viewModel.DEFAULT_BED_HOUR}"
                 android:onValueChange='@{(picker, old, new) -> viewModel.setBedTimeHour(new)}'/>
             <NumberPicker
-                android:id="@+id/sleep_minute"
+                android:id="@+id/bed_time_minute"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/sleep_hour"
+                android:layout_toRightOf="@id/bed_time_hour"
                 android:layout_marginLeft="@dimen/base_margin"
                 app:minValue="@{viewModel.HOUR_MIN_VALUE}"
                 app:maxValue="@{viewModel.MINUTE_MAX_VALUE}"
