--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="half_padding">8dp</dimen>
+    <dimen name="half_padding">4dp</dimen>
     <dimen name="base_padding">8dp</dimen>
     <dimen name="base_margin">8dp</dimen>
     <dimen name="settings_margin">16dp</dimen>
@@ -10,4 +10,5 @@
     <dimen name="triple_margin">24dp</dimen>
 
     <dimen name="intro_gender_image_size">100dp</dimen>
+    <dimen name="circle_button_size">70dp</dimen>
 </resources>
