Hint has been added

--- a/app/src/main/res/layout/daily_statistics_fragment.xml
+++ b/app/src/main/res/layout/daily_statistics_fragment.xml
@@ -15,4 +15,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="@dimen/base_padding"/>
+    <TextView
+        android:id="@+id/hint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/daily_hint"
+        android:textAlignment="center"
+        android:gravity="center"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
