--- a/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
+++ b/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="fragment"
-            type="com.koniukhov.waterreminder.fragments.CustomWaterVolumeDialogFragment" />
+            type="com.koniukhov.waterreminder.dialogs.CustomWaterVolumeDialogFragment" />
     </data>
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
