--- a/app/src/main/res/layout/daily_statistics_fragment.xml
+++ b/app/src/main/res/layout/daily_statistics_fragment.xml
@@ -13,8 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="@dimen/base_padding"/>
+        app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/hint"
         android:layout_width="match_parent"
