--- a/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
+++ b/app/src/main/res/layout/custom_water_volume_dialog_fragment.xml
@@ -89,6 +89,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:maxLength="4"
                         android:layout_toEndOf="@id/drink_ware_icon"
                         android:layout_centerVertical="true"/>
 
